--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="top_pictures">Top pictures</string>
     <string name="recent_pictures">Recent pictures</string>
     <string name="settings">Settings</string>
+    <string name="title">Title</string>
+    <string name="back">Back</string>
+    <string name="option_icon">Option Icon</string>
 </resources>
