DNCGLRY-7 Feed Popular

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="title">Title</string>
     <string name="back">Back</string>
     <string name="option_icon">Option Icon</string>
+    <string name="photo_small">Photo Small</string>
+    <string name="under_construction">Under Construction</string>
+    <string name="page_num">%s / %s</string>
 </resources>
